examples/invalid/semanticErr/exception/try-catch-scope2.wacc
# try and catch are not in the same scope

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    try
        int x = 1;
        throw ArithmeticException("exception")
    catch ArithmeticException e do
        println e;
        x = x + 2
   done
end